Fix Image layout shift

--- a/src/app/(pages)/contact/contactPage.css
+++ b/src/app/(pages)/contact/contactPage.css
@@ -4,14 +4,15 @@
     justify-content: space-between;
     align-items: center;
     height: max-content;
-    padding-top: 2vw;
 }
 
 .Contact__Image {
     width: 40vw;
+    height: auto;
 }
 
 .Contact__Form {
+    margin: 4vw 0;
     /* border: 1px solid blue; */
     width: 30vw;
     display: flex;
